# google-sheet-by-python

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  script.sh
app/: __init__.py
app/config/: config.py
app/decorators/: auth.py
app/dtos/: authDto.py  projectDto.py  userDto.py
app/gservice/: basic.py  drive.py
app/model/: project_model.py  user_model.py
app/repositories/: project.py  user.py
app/routes/: __init__.py  auth.py  project.py  user.py
app/service/: auth.py  project.py  user.py
app/utils/: ResponseModel.py  auth.py
