[tool.poetry]
name = "google-sheet-by-python"
version = "0.1.0"
description = ""
authors = ["羅恩圻 <jacky.lo@program.com.tw>"]
readme = "README.md"
packages = [{include = "google_sheet_by_python"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.6.0"
pymysql = "^1.1.0"
black = "^24.2.0"
flask-migrate = "^4.0.7"
flask-cors = "^4.0.0"
gunicorn = "^21.2.0"
flask = "^3.0.2"
flask-restx = "^1.3.0"
google-api-python-client = "^2.122.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
